[tool.poetry]
name = "ff-tiers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
loguru = "^0.7.2"
matplotlib = "^3.9.2"
kneed = "^0.8.5"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
